2009-03-10 - Sean Huber (shuber@huberry.com)
  * Initial commit
  * Make project structure more like a gem