@@ -1,3 +1,4 @@
 2009-03-10 - Sean Huber (shuber@huberry.com)
   * Initial commit
   * Make project structure more like a gem
+  * Mixin#mixin now accepts an array or multiple arguments
